--- a/templates/employees.html
+++ b/templates/employees.html
@@ -67,11 +67,13 @@
                        class="btn btn-sm btn-outline-secondary me-1">
                         <i class="fa-solid fa-pen"></i> Edit
                     </a>
-                    <a href="{{ url_for('delete_employee', id=emp.id) }}"
-                       class="btn btn-sm btn-outline-danger"
-                       onclick="return confirm('Delete this employee?');">
-                        <i class="fa-solid fa-trash"></i>
-                    </a>
+                    <form action="{{ url_for('delete_employee', id=emp.id) }}" method="POST" style="display:inline;">
+    <button type="submit" class="btn btn-sm btn-outline-danger"
+        onclick="return confirm('Are you sure you want to delete this employee?');">
+        <i class="fa-solid fa-trash"></i>
+    </button>
+</form>
+
                 </div>
 
             </div>
@@ -87,3 +89,4 @@
 </div>
 
 {% endblock %}
+
