--- a/templates/employees/employee_master.html
+++ b/templates/employees/employee_master.html
@@ -122,11 +122,13 @@
                                        class="btn btn-sm btn-outline-secondary me-1">
                                         <i class="fa-solid fa-pen"></i>
                                     </a>
-                                    <a href="{{ url_for('delete_employee', id=e.id) }}"
-                                       class="btn btn-sm btn-outline-danger"
-                                       onclick="return confirm('Delete this employee?');">
-                                        <i class="fa-solid fa-trash"></i>
-                                    </a>
+                                   <form action="{{ url_for('delete_employee', id=emp.id) }}" method="POST" style="display:inline;">
+    <button type="submit" class="btn btn-sm btn-outline-danger"
+        onclick="return confirm('Are you sure you want to delete this employee?');">
+        <i class="fa-solid fa-trash"></i>
+    </button>
+</form>
+
                                 </td>
                             </tr>
                             {% else %}
@@ -142,3 +144,4 @@
 </div>
 
 {% endblock %}
+
