--- a/templates/suppliers/supplier_ledger.html
+++ b/templates/suppliers/supplier_ledger.html
@@ -55,7 +55,8 @@
                         <tbody>
                             {% for purchase in purchases %}
                             <tr>
-                                <td>{{ purchase.purchase_date.strftime('%d-%b-%Y') }}</td>
+                                <td>{{ purchase.date.strftime('%d-%b-%Y') }}</td>
+
                                 <td><a href="{{ url_for('view_purchase', purchase_id=purchase.id) }}" class="btn btn-sm btn-primary">
     View
 </a>
@@ -113,5 +114,6 @@
     }
 </style>
 {% endblock %}
+
 
 
