--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -172,7 +172,8 @@
                           method="POST"
                           onsubmit="return confirm('Delete this product?');">
                         <button class="btn btn-sm btn-outline-danger">
-                            <i class="bi bi-trash"></i>
+                            <i class="bi bi-trash"></i> Delete
+                            
                         </button>
                     </form>
 
@@ -199,4 +200,5 @@
 <script src="{{ url_for('static', filename='js/inventory_add_edit.js') }}"></script>
 
 {% endblock %}
+
 
